--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -65,6 +65,9 @@
         </a>
       </div>
       <div class="navbar-end">
+        <a href="../notes"  class="navbar-item">
+          Notes
+        </a>
         <a href="../contact"  class="navbar-item">
           Contact
         </a>
