fix config and CSS stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ pre code {
     font-family: Consolas, 'Courier New', Courier, monospace;
     display: inline-block;
     overflow: auto !important;
-    white-space: pre-line !important;       
+    white-space: pre !important;       
     word-wrap: break-word !important;       
     padding: 15px 15px  15px 15px;
     vertical-align:middle;
